objects/EPA_Product__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Catalog_Number__c</fullName>
        <description>GAS Order Management</description>
        <displayFormat>EPA-CAT-{0000000}</displayFormat>
        <inlineHelpText>GAS  Product</inlineHelpText>
        <label>Catalog Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Cylinder_Rental_Rate__c</fullName>
        <label>Cylinder Rental Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>Unit Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Product Code</description>
        <inlineHelpText>Product Code</inlineHelpText>
        <label>Product Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gas</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>Gas</label>
                </value>
                <value>
                    <fullName>Liquid</fullName>
                    <color>#78C953</color>
                    <label>Liquid</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restrictions__c</fullName>
        <inlineHelpText>10 day advance notice?</inlineHelpText>
        <label>Restrictions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contract</label>
        <referenceTo>EPA_Contract__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Vendors MUST be Active and Valid Account Record Type.</errorMessage>
            <filterItems>
                <field>Account.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>GAS Vendors</value>
            </filterItems>
            <infoMessage>Vendors MUST be Active.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Products being acquired, products being generated by a process or system, or other kinds of objects being tracked, managed, reported on, etc.  Used initially for gas cylinder products being procured in the GAS application.</description>
    <label>Product</label>
    <nameField>
        <displayFormat>EPA-P-{0000000000}</displayFormat>
        <label>Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>GAS_All_Products</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>List_Price__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Vendor__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Effective_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>GAS All Products</label>
    </listViews>
    <recordTypes>
        <fullName>GAS_Order_Product</fullName>
        <active>true</active>
        <description>GAS Order Management</description>
        <label>GAS Order Product</label>
    </recordTypes>
</CustomObject>